--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "action": {
         "default_popup": "popup.html"
     },
-    "permissions": ["storage", "tabs", "<all_urls>"],
+    "permissions": ["storage", "tabs"],
     "background": {
         "service_worker": "background.js"
     },
