--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,9 @@
     "https://www.netflix.com/*",
     "storage"
   ],
+  "background": {
+    "page": "background.html"
+  },
   "content_scripts": [
     {
       "matches": ["https://www.netflix.com/viewingactivity*"],
