--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,19 @@
 {
-  "name": "Netflix Data",
-  "version": "1.0",
   "manifest_version": 3,
+  "name": "Netflix Viewing Activity Extractor",
+  "version": "1.0",
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "48": "icon.png"
-    }
+      "default_popup": "popup.html"
   },
-  "permissions": [
-    "activeTab",
-    "tabs",
-    "storage"
-  ],
-  "host_permissions": [
-    "https://www.netflix.com/*/*"
-  ],
+  "permissions": ["storage", "tabs"],
+  "host_permissions": ["https://www.netflix.com/*"],
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
-  }
-  ,
+      "service_worker": "background.js"
+  },
   "content_scripts": [
-    {
-      "matches": ["https://www.netflix.com/viewingactivity*"],
-      "js": ["content.js"]
-    }
+      {
+          "matches": ["https://www.netflix.com/*"],
+          "js": ["content.js"]
+      }
   ]
-  
 }
